# esp32_gopro_canbus_controller_v2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  camera_manager_design.md  dev.ps1  partitions.csv  sdkconfig.defaults  web_ui_spec.md
.github/: release.yml
.github/workflows/: release-beta.yml  release-promote.yml
apps/main/: CMakeLists.txt  sdkconfig.defaults
apps/main/components/gopro/open_gopro_ble/: CMakeLists.txt  control.c  gatt.c
apps/main/components/gopro/open_gopro_ble/include/: open_gopro_ble_spec.h
apps/main/main/: CMakeLists.txt  main.c
apps/main/web_ui/: app.js  compress.py  index.html  style.css  updates.js
apps/recovery/: CMakeLists.txt  sdkconfig.defaults
apps/recovery/main/: CMakeLists.txt  main.c  recovery.html
components/ble_core/: README.md  ble_connect.c  ble_core_internal.h  ble_gatt_write.c  ble_init.c  ble_scan.c
components/camera_manager/: CMakeLists.txt  README.md  camera_manager.c  pair_attempt.c
components/camera_manager/include/: camera_manager.h  camera_types.h
components/can_manager/: README.md  can_manager.c
components/can_manager/include/: can_manager.h
components/gopro/: gopro_model.c  gopro_model.h
components/gopro/gopro_wifi_rc/: CMakeLists.txt  README.md  command.c  connection.c  driver.c  gopro_wifi_rc_internal.h  status.c  udp.c
components/gopro/gopro_wifi_rc/include/: gopro_wifi_rc.h  gopro_wifi_rc_spec.h
components/gopro/open_gopro_ble/: CMakeLists.txt  README.md  cohn.c  control.c  driver.c  gatt.c  notify.c  open_gopro_ble_internal.h  pairing.c  query.c  readiness.c  status.c
components/gopro/open_gopro_ble/include/: open_gopro_ble.h  open_gopro_ble_spec.h
components/gopro/open_gopro_http/: CMakeLists.txt  driver.c  http_client.c  open_gopro_http_internal.h  open_gopro_http_spec.h  status.c
components/gopro/open_gopro_http/include/: open_gopro_http.h
components/http_server/: CMakeLists.txt  api_cameras.c  api_rc.c  api_settings.c  api_system.c  driver.c  http_server_internal.h
components/wifi_manager/: CMakeLists.txt  README.md  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
docs/: development.md
docs/design/: camera-manager.md  log-capture.md  ota.md
main/: CMakeLists.txt  idf_component.yml  main.c
tools/: flash_factory.ps1
tools/firmware-proxy/: launchpad.toml
web_ui/: app.js  index.html  style.css
(+25 files in other folders)
