idf_component_register(
    SRCS
        "driver.c"
        "pairing.c"
        "gatt.c"
        "readiness.c"
        "control.c"
        "status.c"
        "query.c"
        "notify.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "."
        ".."
    REQUIRES
        bt
        nvs_flash
        esp_timer
        freertos
        camera_manager
        can_manager
        ble_core
)
